k8s-configs/ping-cloud/base/pingaccess-was/admin/cloud-generic/statefulset.yaml
# This defines the pingaccess-was admin deployment.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingaccess-was-admin
  labels:
    cluster: pingaccess-was-cluster
    role: pingaccess-was-admin
spec:
  selector:
    matchLabels:
      role: pingaccess-was-admin
  replicas: 1
  serviceName: pingaccess-was-admin
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  template:
    metadata:
      name: pingaccess-was-admin
      labels:
        cluster: pingaccess-was-cluster
        role: pingaccess-was-admin
        pod-reaper: enabled
      annotations:
        lastUpdateReason: "NA"
    spec:
      serviceAccountName: ping-serviceaccount
      containers:
      - name: pingaccess-was-admin
        image: public.ecr.aws/r2h3l6e4/pingcloud-apps/pingaccess-was:v2.2.2
        imagePullPolicy: Always
        securityContext:
          runAsGroup: 9999
          runAsNonRoot: true
          runAsUser: 9031
          allowPrivilegeEscalation: false
        resources:
          requests:
            memory: "1280Mi"
            cpu: "20m"
          limits:
            memory: "2560Mi"
            cpu: "1"
        volumeMounts:
        - name: pingaccess-was-init
          mountPath: /opt/staging/hooks/logger.lib.sh
          subPath: logger.lib.sh
        - name: ssh-dir
          mountPath: /home/ping/.ssh
        - name: shared-dir
          mountPath: /opt/shared-dir
        - name: data-dir
          mountPath: /usr/local/bin/kubectl
          subPath: kubectl
        - name: data-dir
          mountPath: /opt/staging/newrelic.jar
          subPath: newrelic.jar
        - name: out-dir
          mountPath: /opt/out
        - name: pingaccess-was-license
          mountPath: /opt/in/instance/conf/pingaccess.lic
          subPath: pingaccess.lic
        - name: data-dir
          mountPath: /opt/staging/ds_env_vars
          subPath: ds_env_vars
        - name: data-dir
          mountPath: /opt/staging/p14c_env_vars
          subPath: p14c_env_vars
        - name: upgrade-dir
          mountPath: /tmp/instance
          subPath: instance
        - name: license-dir
          mountPath: /opt/license
        readinessProbe:
          exec:
            command: [ /opt/staging/hooks/85-pa-admin-readiness.sh ]
          initialDelaySeconds: 0
          periodSeconds: 5
          failureThreshold: 1
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command: [ /opt/staging/hooks/99-pa-admin-liveness.sh ]
          initialDelaySeconds: 60
          periodSeconds: 30
          failureThreshold: 3
          timeoutSeconds: 5
        ports:
        - containerPort: 9000
        - containerPort: 9090
      securityContext:
        fsGroup: 9999
      volumes:
      - name: ssh-dir
        emptyDir: {}
      - name: shared-dir
        emptyDir: {}
      - name: data-dir
        emptyDir: {}
      - name: license-dir
        emptyDir: {}
      - name: upgrade-dir
        emptyDir: {}
      - name: pingaccess-was-init
        configMap:
          name: pingcommon-init
          defaultMode: 0555
      - name: ssh-id-key-secret
        secret:
          secretName: ssh-id-key-secret
          optional: true
          defaultMode: 0400
      - name: known-hosts-config
        configMap:
          name: known-hosts-config
          optional: true
          defaultMode: 0644
      - name: out-dir
        persistentVolumeClaim:
          claimName: out-dir
      - name: pingaccess-was-license
        secret:
          secretName: pingaccess-was-license
          optional: true
          defaultMode: 0400
      - name: pingaccess-was-passwords
        secret:
          secretName: pingaccess-was-passwords
          optional: true
          defaultMode: 0400
  volumeClaimTemplates:
  - metadata:
      name: out-dir
      annotations:
        volume.autoscaler.kubernetes.io/ignore: "true"
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: pingaccess-was-gp3
      resources:
        requests:
          storage: 20Gi
