k8s-configs/ping-cloud/base/pingaccess-was/admin/cloud-generic/ingress.yaml
# This defines the ingress for the pingaccess-was admin service

# NOTE: it will only work if an ingress controller (e.g. nginx) is running on
# your cluster.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingaccess-was-admin-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  ingressClassName: nginx-private
  tls:
  - hosts:
    - pingaccess-was-admin-dev.ping-demo.com
  rules:
  - host: pingaccess-was-admin-dev.ping-demo.com
    http:
      paths:
      # This rule gives access to the pingaccess-was admin services.
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pingaccess-was-admin
            port:
              number: 9000
